traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:2: error: not found: value Direction
    if (getDirection() == Direction.EST) {
                          ^TraversalZigZag:12: error: not found: value Direction
    if (getDirection() == Direction.OUEST) {
                          ^TraversalZigZag:34: error: not found: value Direction
    if (getDirection() == Direction.EST) {
                          ^TraversalZigZag:40: error: not found: value Direction
      (getDirection() == Direction.OUEST) 
                         ^